--- a/slatela.html
+++ b/slatela.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0068)file:///C:/Users/ritae/AppData/Local/Temp/Nicepage/chrome/index.html -->
-<html lang="en" class="u-responsive-xl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="gr" class="u-responsive-xl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta name="keywords" content="OrganicBreads, ​Delicious Baking, ​Fresh breads, cakes and pasties, Our ​Breads, ​Delicious Baking.
